# wazuh

./: .clang-format  .clang-tidy  .coverage  .coveragerc  .gitattributes  .gitignore  .gitmodules  .hgignore  .hgtags  .pre-commit-config.yaml  .ruff.toml  .test-5538  .travis.yml  BUGS  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONFIG  CONTRIB  CONTRIBUTING.md  CONTRIBUTORS  INSTALL  Jenkinsfile  Jenkinsfile-daily  Jenkinsfile-instant  LICENSE  QUICKWIT_INTEGRATION.md  README  README.md  SECURITY.md  SUMMARY.md  TODO  TestJenkins  VERSION.json  a  abc  add_localfiles.sh  api-reference.md  (+28 more)
source/API/: CMakeLists.txt
source/api/: CMakeLists.txt
source/apiserver/: CMakeLists.txt
source/base/: CMakeLists.txt  EventHandler.hpp  baseTypes.hpp  error.hpp  expression.cpp  expression.hpp  name.hpp  parseEvent.cpp  parseEvent.hpp  result.hpp
source/bk/: CMakeLists.txt
source/catalog/: CMakeLists.txt  Catalog.cpp  Catalog.hpp  yml2Json.hpp
source/cmds/: CMakeLists.txt
source/conf/: CMakeLists.txt
source/fs/: CMakeLists.txt
source/hlp/: CMakeLists.txt  LogQLParser.cpp  SpecificParsers.cpp  SpecificParsers.hpp
source/hlp2/: CMakeLists.txt
source/indexerconnector/: CMakeLists.txt
source/proto/: CMakeLists.txt  generateCode.sh  readme.md
source/router2/: CMakeLists.txt
source/schemval/: CMakeLists.txt
source/server/: CMakeLists.txt  engineServer.cpp  engineServer.hpp  engineserver.cpp  engineserver.hpp  protocolHandler.cpp  protocolHandler.hpp  server.hpp
source/wdb/: CMakeLists.txt
src/: .clang-format  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Config.Make  Doxyfile  InstallAgent.sh  InstallAgent.sh.old  InstallServer.sh  LOCATION  Makeall  Makefile  REVISION  Readme.md  TEMP.db  THIS_IS_A_TEST  VERSION  WAZUH_VERSION  adduser.sh  agent-auth  build.py  check_configuration  cmake_install.cmake  config_checker  libgcc_s.so.1  libstdc++.so.6  pf  wazuh-cli  wazuh_validator  wdb.py
src/active-response/: CMakeLists.txt  active_responses.c  active_responses.h  cloudflare_ban.py  disable-account.c  firewalld-drop.c  host-deny.c  ip-customblock.c  ip-customblock.sh  kaspersky.c  kaspersky.py  netsh.c  ossec-slack.sh  restart-ossec.c  restart-wazuh.c  restart.sh  route-null.c  utilities.c  utilities.h  wazuh-slack.c
src/addagent/: CMakeLists.txt  COPYRIGHT  Makefile  addagent.c  auth_client.c  b64.c  main.c  manage_agents.c  manage_agents.h  manage_keys.c  read_from_user.c  validate.c  validate.h
src/agentlessd/: Makefile  README  agentlessd.c  agentlessd.h  lessdcom.c  main.c
src/alert_forwarder/: alert_forwarder.conf  main.py
src/analysisd/: Makefile  accumulator.c  accumulator.h  active-response.c  active-response.h  agent-metadata.c  agent-metadata.h  analysisd.c  analysisd.h  ar_json.c  asyscom.c  cleanevent.c  cleanevent.h  config.c  config.h  config_json.c  dodiff.c  dodiff.h  eventinfo.c  eventinfo.h  eventinfo_list.c  expression.c  expression.h  fts.c  fts.h  hotreload.h  kafka_func.c  kafka_func.h  labels.c  labels.h  limits.c  limits.h  list_log.c  list_log.h  lists.c  lists.h  lists_list.c  lists_make.c  lists_make.h  logmsg.c  (+20 more)
src/ci/: build_tools.py  check_output.py  run_check.py  utils.py
src/cli/: action.c  action.h  agents.c  agents.h  ansi.c  ansi.h  cli.c  cli.h  cmc.c  cmc.h  cmd.c  cmd.h  cms.c  color.h  common.c  common.h  control.c  control.h  dummy_commands.c  dummy_commands.h  hints.h  iac.h  liner.c  liner.h  main.c  stream-tcp.c  stream-tcp.h  stream.h  string_list.c  string_list.h
src/client-agent/: CMakeLists.txt  COPYRIGHT  Makefile  agcom.c  agcom_socket.c  agentd.c  agentd.h  buffer.c  config.c  event-forward.c  intcheck_op.c  main.c  manager.c  notify.c  receiver-win.c  receiver.c  reload_agent.c  request.c  restart_agent.c  rotate_log.c  sendmsg.c  start_agent.c  startup_gate.c  state.c  state.h  wmodules_health_status.c
src/cmake/: WazuhRpath.cmake  mingw-w64-i686.cmake
src/config/: CMakeLists.txt  Makefile  README.md  active-response.c  active-response.h  agentlessd-config.c  agentlessd-config.h  alerts-config.c  authd-config.c  authd-config.h  authd-key-request-config.c  buffer-config.c  client-config.c  client-config.h  cluster-config.c  config.c  config.h  csyslogd-config.c  csyslogd-config.h  dbd-config.c  dbd-config.h  email-alerts-config.c  exec-config.c  exec-config.h  global-config.c  global-config.h  indexer-config.c  indexer-config.h  integrator-config.c  integrator-config.h  internal-options.c  internal-options.h  labels-config.c  labels-config.h  localfile-config.c  localfile-config.h  logtest-config.c  logtest-config.h  mail-config.c  mail-config.h  (+47 more)
src/content/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/data_provider/: CMakeLists.txt  cppcheckSuppress.txt
src/dbsync/: CMakeLists.txt  build.py  build.sh  cppcheckSuppress.txt  dbsync_doxygen.conf  readme.md
src/diagrams/: folders.puml
src/engine/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  COPYING  COPYING-engine  README.md  apidoc.json  deploy.sh  rtr  rtr.sh  rtr_input.json  tmp_downloaded.evtx  vcpkg-configuration.json  vcpkg.json
src/error_messages/: debug_messages.h  error_messages.h  info_messages.h  information_messages.h  warning_messages.h
src/headers/: agent_messages_adapter.h  agent_op.h  ar.h  atomic.h  audit_op.h  auth_client.h  batch_queue_op.h  binaries_op.h  bqueue_op.h  buffer_op.h  bzip2_op.h  check_config.h  cloud_limits.h  cluster_utils.h  config_op.h  cryptography.h  custom_output_search.h  debug_op.h  defs.h  dirtree_op.h  dll_load_notify.h  engine_external.h  enrollment_op.h  exec_op.h  expression.h  file-queue.h  file_op.h  flatcc_helpers.h  fs_op.h  hash_op.h  hashmap_op.h  help.h  hooking.h  http_op.h  indexed_queue_op.h  integrity_op.h  json-queue.h  json_op.h  key_request_op.h  labels_op.h  (+55 more)
src/init/: add_localfiles.sh  adduser.sh  darwin-addusers.pl  darwin-addusers.sh  darwin-delete-oldusers.sh  darwin-delusers.sh  (+42 more)
test/: CMakeLists.txt  README.md  engineTestMain.cpp  setupEnvironment.py  setupEnvironment.sh
(+20065 files in other folders)
